refactor: allow java 8